// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status matches snapshot with error type 1`] = `
<section
  className="validation-errors-display validation-errors-display__list"
>
  There was a problem: 
  test status
</section>
`;

exports[`Status matches snapshot with non-error type 1`] = `
<section
  className="validation-errors-display validation-errors-display__list"
>
  test status
</section>
`;
